--- a/custom_components/svk_mimer/manifest.json
+++ b/custom_components/svk_mimer/manifest.json
@@ -12,8 +12,6 @@
   "documentation": "https://github.com/robinostlund/homeassistant-svk-mimer/",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/robinostlund/homeassistant-svk-mimer/issues",
-  "requirements": [
-    "aiosvkmimer>=0.1.12"
-  ],
+  "requirements": [],
   "version": "0.0.14"
 }
